force-app/main/default/objects/Usage_Summary__c/Usage_Summary__c.object-meta.xml
<CustomObject>
    <label>Usage Summary</label>
    <nameField>
        <displayFormat>USM-{0000000}</displayFormat>
        <label>Usage Summary No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>