force-app/main/default/objects/Usage_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Summaries</relationshipLabel>
    <relationshipName>Usage_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>