force-app/main/default/objects/Usage_Summary__c/fields/Count_Usage_Data__c.field-meta.xml
<CustomField>
    <fullName>Count_Usage_Data__c</fullName>
    <label>Count Usage Data</label>
    <summaryForeignKey>Usage_Data__c.Usage_Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>