force-app/main/default/objects/Usage_Summary__c/fields/Data_Submitted_to_OTS__c.field-meta.xml
<CustomField>
    <fullName>Data_Submitted_to_OTS__c</fullName>
    <label>Data Submitted to OTS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>