force-app/main/default/objects/Usage_Summary__c/fields/Exclude_from_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Calculation__c</fullName>
    <formula>AND( NOT( ISBLANK(TEXT(Type__c))) , TEXT(Type__c) != &apos;Supply&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude from Calculation</label>
    <type>Checkbox</type>
</CustomField>