force-app/main/default/objects/Usage_Summary__c/fields/No_Data_Supplied__c.field-meta.xml
<CustomField>
    <fullName>No_Data_Supplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Data Supplied</label>
    <type>Checkbox</type>
</CustomField>