force-app/main/default/objects/Usage_Summary__c/fields/Producer_Account__c.field-meta.xml
<CustomField>
    <fullName>Producer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usage Summaries (Related Account)</relationshipLabel>
    <relationshipName>Usage_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>