force-app/main/default/objects/Usage_Summary__c/fields/Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Registration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Detail</label>
    <referenceTo>Registration_Detail__c</referenceTo>
    <relationshipLabel>Usage Summaries</relationshipLabel>
    <relationshipName>Usage_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>