force-app/main/default/objects/Usage_Summary__c/fields/Sharing_Refresh_Requested_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Refresh_Requested_Date_Time__c</fullName>
    <label>Sharing Refresh Requested Date/Time</label>
    <type>DateTime</type>
</CustomField>