force-app/main/default/objects/Usage_Summary__c/fields/Sharing_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Update_Required__c</fullName>
    <formula>ISBLANK(Sharing_Updated_Date_Time__c) || 
Sharing_Refresh_Requested_Date_Time__c &gt; BLANKVALUE(Sharing_Updated_Date_Time__c,Sharing_Refresh_Requested_Date_Time__c) || 
Producer_Account__r.Primary_Contact_Set_Date_Time__c &gt; Sharing_Updated_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sharing Update Required</label>
    <type>Checkbox</type>
</CustomField>