force-app/main/default/objects/Usage_Summary__c/fields/Tab_Code__c.field-meta.xml
<CustomField>
    <fullName>Tab_Code__c</fullName>
    <label>Tab Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>