force-app/main/default/objects/Usage_Summary__c/fields/Total_Everything_Else_Kilograms__c.field-meta.xml
<CustomField>
    <fullName>Total_Everything_Else_Kilograms__c</fullName>
    <label>≤ 700 kg Tires</label>
    <summarizedField>Usage_Data__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Usage_Data__c.Category__c</field>
        <operation>equals</operation>
        <value>Tires less than or equal to 700 kg</value>
    </summaryFilterItems>
    <summaryForeignKey>Usage_Data__c.Usage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>