force-app/main/default/objects/Usage_Summary__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <summarizedField>Usage_Data__c.Count__c</summarizedField>
    <summaryForeignKey>Usage_Data__c.Usage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>