force-app/main/default/objects/Usage_Summary__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <label>Total Weight</label>
    <summarizedField>Usage_Data__c.Quantity__c</summarizedField>
    <summaryForeignKey>Usage_Data__c.Usage_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>