force-app/main/default/objects/Usage_Summary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Outside Ontario</fullName>
            </value>
            <value>
                <fullName>High-volume Drop-off</fullName>
            </value>
            <value>
                <fullName>Total Picked Up</fullName>
            </value>
            <value>
                <fullName>Total Retreaded</fullName>
            </value>
            <value>
                <fullName>Sent for Processing</fullName>
            </value>
            <value>
                <fullName>Retreaded</fullName>
            </value>
            <value>
                <fullName>Land Disposed</fullName>
            </value>
            <value>
                <fullName>Incinerated</fullName>
            </value>
            <value>
                <fullName>Used as Fuel</fullName>
            </value>
            <value>
                <fullName>Stockpiled</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Received from Hauler</fullName>
            </value>
            <value>
                <fullName>Total Processed Materials</fullName>
            </value>
            <value>
                <fullName>Total reused on vehicles</fullName>
            </value>
            <value>
                <fullName>Total reused for a new purpose</fullName>
            </value>
            <value>
                <fullName>My Products</fullName>
            </value>
            <value>
                <fullName>Third-party Products</fullName>
            </value>
            <value>
                <fullName>Sent for Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>