force-app/main/default/objects/Usage_Summary__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be greater than Date</description>
    <errorConditionFormula>End_Date__c &lt; Date__c</errorConditionFormula>
    <errorMessage>End Date must be greater than Date</errorMessage>
</ValidationRule>